--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <section>
 <div class="mainDetails">
 <div id="Me">
-<img scr="Me.jpg"alt="yikes mb"/>
+<img src="Me.jpg"alt="yikes mb"/>
 </div>
 </section>
 <section>
