--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link type="text/css" rel="stylesheet" href="style.css">
 <div id="mainArea">
 <section>
 <div class="sectionTitle"><h1>Thomas Lewis-My Profile for IT</h1></div>
