--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 <div class="sectionContent">
 <p>My idea is to create a standalone unity first person shoot based arena game project that would entail individual characters with ability's and therefore accompanying designs and roles that they serve in the games replay ability and unique interactions or match ups within a team-based setting of 3v3 in a player verse player environment dedicated to supporting each character in a soft counter manor where the individual skill and objective control of the map as a team will provide overall success with said the characters themselves will have skill ceilings to witch a player works within.</p>
 </article>
+</section>
+<section>
 <article>
 <div class="sectionTitle"><h1>Motivation</h1></div>
 <div class="sectionContent">
