--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <article>
 <p>1.16Personalitys-Advocate: I think these results are somewhat astoundingly accurate and detail my wants to make lasting change or actively impact the world around me in a positive/constructive manor to avoid issues all together, when it comes to team work I am greatly capable of flexible responsibility's but need independence in segments to gather thoughts and maintain composure within a collaborative environment and this would be vital to make apparent when apart of or developing a team as without space I'll find myself incapable of unwinding and be constantly exhausted and incapable of sustaining a work life balance.</p>
 <div class="personalDetails">
-<div id="16personalitys">
+<div id="personalitys">
 <img src="16 personalitys.PNG"alt="yikes" />
 </div>
 </article>
@@ -57,7 +57,7 @@
 <article>
 <p>VIA Character Strengths-(Judgement): reassuring to know that my test results are similar in the sense that they all refer me as an active individual that requires balance to maintain function with a keen ability to observe and attempt to recreate beauty, can work within teams well and work fluently but require clear instruction and personal space to work within being considerate of my peers is a key goal from understanding this, and from this I would be well capable of formulating a group but would struggle to maintain without guidance or prior experience. </p>
 <div class="personalDetails">
-<div id="1.VIACharacterstrengths">
+<div id="VIACharacterstrengths">
 <img src="1.VIA Character strengths.PNG"alt="yikes" />
 </div>
 </article>
