--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <article>
 <p>Metagame Systems Programmer is a role in which actively improve the efficiency of code in a given product and the implementations of new systems or blocks of code with the integrity of performance and function over anything else primarily functioning in teams with given tasks to operate on to a deadline much like movie editing to make the movie play as well as the story was wrote originally, the requirements are heavily orientated with prior experience with visual c++ and unreal engine witch works towards their titles that are AAA game titles across many platforms as well as the need to be extremely driven in your work and competent in team dynamics and problem solving generally they request an example of your work to qualify for a position, relatively I am inexperienced in visual c++ and unreal engine but do have small amounts of game design experience from editing save files (Ricks Game Stuff) and various game elements in witch I've leant to read a lot of code relevant to titles Gearbox produces such as BioShock and borderlands doing as such I need to further my experience in modifying code to a means of efficiency for program function rather than braking the game rules and become more team orientated in my future endeavors by means of an internship or prior work with another game industry to have some qualified experience within the specific field of game production.</p>
 <ul>
-<li>Refered job:<a href="https://gearboxsoftware.bamboohr.com/jobs/view.php?id=222"target="_blank">gearboxsoftware.bamboohr.com</a></li>
+<li>Refered job:<a href="https://gearboxsoftware.bamboohr.com/jobs/view.php?id=222"target="_blank">gearboxsoftware.bamboohr.com</a>[Accessed 07 September 2020]</li>
 </ul>
 </article>
 <div class="jobDetails">
@@ -45,6 +45,10 @@
 <div class="personalDetails">
 <div id="personalitys">
 <img src="16 personalitys.PNG"alt="yikes" />
+<ul>
+<li><ul>
+<li>16personalities.com. 2020. Free Personality Test, Type Descriptions, Relationship And Career Advice  <a href="https://www.16personalities.com/"target="_blank">16personalities.com/</a> [Accessed 13 September 2020]. </li>
+</ul>
 </div>
 </article>
 <article>
@@ -52,6 +56,10 @@
 <div class="personalDetails">
 <div id="eduplaner">
 <img src="eduplaner.PNG"alt="yikes" />
+<ul>
+<li><ul>
+<li>Educationplanner.org. 2020. What's Your Learning Style?<a href="http://www.educationplanner.org/students/self-assessments/learning-styles.shtml"target="_blank">educationplanner.org/students/self-assessments/</a> [Accessed 13 September 2020]. </li>
+</ul>
 </div>
 </article>
 <article>
@@ -59,6 +67,10 @@
 <div class="personalDetails">
 <div id="VIACharacterstrengths">
 <img src="1.VIA Character strengths.PNG"alt="yikes" />
+<ul>
+<li><ul>
+<li>Viacharacter.org. 2020. Personality Test, Personality Assessment: VIA Survey <a href="https://www.viacharacter.org/survey/account/register"target="_blank">viacharacter.org/survey/</a> [Accessed 13 September 2020]. </li>
+</ul>
 </div>
 </article>
 </section>
