--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <div class="sectionTitle"><h1>Thomas Lewis-My Profile for IT</h1></div>
 <div class="sectionContent">
 <article>
-<p>I am Tom Lewis, 3879008, S3879008@student.rmit.edu.au, I am a male Australian Victorian born and raised 19-year-old high school graduate from Patterson river secondary and English is my only language, have been gaming and drawing as long as I remember with a keen love for DragonBall, Tony Hawk games, Call of Duty Zombies and this developed into a love for computers themselves and the art of programing, and own a cat and dog Lilith(named after the game character from borderlands) and Sam.</p>
+<p>𝓘 𝓪𝓶 𝓣𝓸𝓶 𝓛𝓮𝔀𝓲𝓼, 3879008, 𝓢3879008@𝓼𝓽𝓾𝓭𝓮𝓷𝓽.𝓻𝓶𝓲𝓽.𝓮𝓭𝓾.𝓪𝓾, 𝓘 𝓪𝓶 𝓪 𝓶𝓪𝓵𝓮 𝓐𝓾𝓼𝓽𝓻𝓪𝓵𝓲𝓪𝓷 𝓥𝓲𝓬𝓽𝓸𝓻𝓲𝓪𝓷 𝓫𝓸𝓻𝓷 𝓪𝓷𝓭 𝓻𝓪𝓲𝓼𝓮𝓭 19-𝔂𝓮𝓪𝓻-𝓸𝓵𝓭 𝓱𝓲𝓰𝓱 𝓼𝓬𝓱𝓸𝓸𝓵 𝓰𝓻𝓪𝓭𝓾𝓪𝓽𝓮 𝓯𝓻𝓸𝓶 𝓟𝓪𝓽𝓽𝓮𝓻𝓼𝓸𝓷 𝓻𝓲𝓿𝓮𝓻 𝓼𝓮𝓬𝓸𝓷𝓭𝓪𝓻𝔂 𝓪𝓷𝓭 𝓔𝓷𝓰𝓵𝓲𝓼𝓱 𝓲𝓼 𝓶𝔂 𝓸𝓷𝓵𝔂 𝓵𝓪𝓷𝓰𝓾𝓪𝓰𝓮, 𝓱𝓪𝓿𝓮 𝓫𝓮𝓮𝓷 𝓰𝓪𝓶𝓲𝓷𝓰 𝓪𝓷𝓭 𝓭𝓻𝓪𝔀𝓲𝓷𝓰 𝓪𝓼 𝓵𝓸𝓷𝓰 𝓪𝓼 𝓘 𝓻𝓮𝓶𝓮𝓶𝓫𝓮𝓻 𝔀𝓲𝓽𝓱 𝓪 𝓴𝓮𝓮𝓷 𝓵𝓸𝓿𝓮 𝓯𝓸𝓻 𝓓𝓻𝓪𝓰𝓸𝓷𝓑𝓪𝓵𝓵, 𝓣𝓸𝓷𝔂 𝓗𝓪𝔀𝓴 𝓰𝓪𝓶𝓮𝓼, 𝓒𝓪𝓵𝓵 𝓸𝓯 𝓓𝓾𝓽𝔂 𝓩𝓸𝓶𝓫𝓲𝓮𝓼 𝓪𝓷𝓭 𝓽𝓱𝓲𝓼 𝓭𝓮𝓿𝓮𝓵𝓸𝓹𝓮𝓭 𝓲𝓷𝓽𝓸 𝓪 𝓵𝓸𝓿𝓮 𝓯𝓸𝓻 𝓬𝓸𝓶𝓹𝓾𝓽𝓮𝓻𝓼 𝓽𝓱𝓮𝓶𝓼𝓮𝓵𝓿𝓮𝓼 𝓪𝓷𝓭 𝓽𝓱𝓮 𝓪𝓻𝓽 𝓸𝓯 𝓹𝓻𝓸𝓰𝓻𝓪𝓶𝓲𝓷𝓰, 𝓪𝓷𝓭 𝓸𝔀𝓷 𝓪 𝓬𝓪𝓽 𝓪𝓷𝓭 𝓭𝓸𝓰 𝓛𝓲𝓵𝓲𝓽𝓱(𝓷𝓪𝓶𝓮𝓭 𝓪𝓯𝓽𝓮𝓻 𝓽𝓱𝓮 𝓰𝓪𝓶𝓮 𝓬𝓱𝓪𝓻𝓪𝓬𝓽𝓮𝓻 𝓯𝓻𝓸𝓶 𝓫𝓸𝓻𝓭𝓮𝓻𝓵𝓪𝓷𝓭𝓼) 𝓪𝓷𝓭 𝓢𝓪𝓶.</p>
 </article>
 </div>
 </section>
