--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <link type="text/css" rel="stylesheet" href="style.css">
 <div id="mainArea">
 <section>
@@ -141,3 +142,4 @@ HDRP (High-Definition Rendering) as well as the attached hitbox logic and physic
 </article>
 </section>
 </div>
+</html>
